--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
+
 <head>
   <meta charset="utf-8">
   <title>TodoAppOne</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+
+<body style="padding:0; margin:0; height:100%;">
   <app-root></app-root>
 </body>
+
 </html>
