--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body style="padding:0; margin:0; height:100%;">
+<body style="padding:0; margin:0; height:100%; overflow-x:hidden;box-sizing: border-box;">
   <app-root></app-root>
 </body>
 
