--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,18 +1,30 @@
-<!doctype html>
-<html lang="en" style="height: 100%;">
+<!DOCTYPE html>
+<html lang="en" style="height: 100%">
+  <head>
+    <meta charset="utf-8" />
+    <title>TodoAppOne</title>
+    <base href="/" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>TodoAppOne</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <!-- <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet"> -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-
-<body style="padding:0; margin:0; height:100%; overflow-x:hidden;box-sizing: border-box;">
-  <app-root></app-root>
-</body>
-
+  <body
+    style="
+      padding: 0;
+      margin: 0;
+      height: 100%;
+      overflow-x: hidden;
+      box-sizing: border-box;
+    "
+  >
+    <app-root></app-root>
+  </body>
 </html>
